# cNBT

./: .gitignore  CMakeLists.txt  Makefile  README  afl_check.c  afl_check.sh  blockreplace.c  buffer.c  buffer.h  check.c  datlevel.c  endianness.c  endianness.h  list.h  main.c  nbt.c  nbt.h  nbt_loading.c  nbt_parsing.c  nbt_treeops.c  nbt_util.c  regioninfo.c
